--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,11 @@
     <dimen name="space_20">20dp</dimen>
     <dimen name="text_18">18sp</dimen>
     <dimen name="text_15">15sp</dimen>
+    <dimen name="space_50">50dp</dimen>
+    <dimen name="space_80">80dp</dimen>
+    <dimen name="space_3">3dp</dimen>
+    <dimen name="space_200">200dp</dimen>
+    <dimen name="space_220">220dp</dimen>
+    <dimen name="space_230">230dp</dimen>
+    <dimen name="space_100">100dp</dimen>
 </resources>
