--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -13,4 +13,10 @@
         android:icon="@drawable/ic_tv"
         android:title="@string/tv_show_label"
         app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/favorite"
+        android:icon="@drawable/ic_favorite"
+        android:title="@string/favorite_label"
+        app:showAsAction="ifRoom" />
 </menu>
