--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,11 @@
     <dimen name="space_220">220dp</dimen>
     <dimen name="space_230">230dp</dimen>
     <dimen name="space_100">100dp</dimen>
+    <dimen name="space_35">35dp</dimen>
+    <dimen name="text_20">20sp</dimen>
+    <dimen name="text_19">19sp</dimen>
+    <dimen name="space_15">15dp</dimen>
+    <dimen name="text_25">25sp</dimen>
+    <dimen name="space_16">16dp</dimen>
+    <dimen name="space_12">12dp</dimen>
 </resources>
